<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:padding="30dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="3dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:text="5+10-3" />

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="50sp"
            android:textColor="@color/green"
            tools:text="12" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:stretchColumns="*">

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                style="@style/Button_Style"
                android:text="@string/clearchar" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_bracket_left"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                style="@style/Button_Style"
                android:text="@string/leftbracketchar" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_bracket_right"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/rightbracketchar" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_division"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/divisionchar" />

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_seven"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/black"
                style="@style/Button_Style"
                android:textStyle="bold"
                android:text="@string/bseven" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_eight"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                style="@style/Button_Style"
                android:text="@string/beight" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_nine"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="90dp"
                android:textStyle="bold"
                style="@style/Button_Style"
                android:text="@string/bnine" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_multiply"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                style="@style/Button_Style"
                android:text="@string/multiplaychar" />

        </TableRow>
        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_four"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/black"
                style="@style/Button_Style"
                android:textStyle="bold"
                android:text="@string/bfour" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_five"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                style="@style/Button_Style"
                android:text="@string/bfive" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_six"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                style="@style/Button_Style"
                android:text="@string/bsix" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_subtraction"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                style="@style/Button_Style"
                android:text="@string/minuschar" />

        </TableRow>
        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_one"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/bone" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_two"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/black"
                style="@style/Button_Style"
                android:textStyle="bold"
                android:text="@string/btwo" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_three"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                style="@style/Button_Style"
                android:text="@string/bthree" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_addition"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textColor="@color/black"
                style="@style/Button_Style"
                android:textStyle="bold"
                android:text="@string/pluschar" />

        </TableRow>
        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_zero"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/bzero" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/dotchar" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_equals"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                style="@style/Button_Style"
                android:background="@color/green"
                android:text="@string/equal" />

        </TableRow>
    </TableLayout>

</LinearLayout>